WIP: Configure setup() to use setup.cfg files
Since setuptool 30.3.0, it is possible to leverage things in setup.cfg.
This is helpful for automation tools which might want to parse setup.cfg
to learn about the python project.  Move some of our items out of
setup.py and into setup.cfg.

Signed-off-by: Paul Belanger <pabelanger@redhat.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,19 @@
+[metadata]
+name = mazer
+description = Ansible content manager
+author = Red Hat, Inc.
+author_email = info@ansible.com
+classifiers =
+    Development Status :: 2 - Pre-Alpha
+    Intended Audience :: Developers
+    License :: OSI Approved :: Apache Software License
+    Natural Language :: English
+    Programming Language :: Python :: 2
+    Programming Language :: Python :: 2.6
+    Programming Language :: Python :: 2.7
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.6
+
 [bumpversion]
 current_version = 0.2.1
 commit = True
